--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "carl furrow <hello@carlfurrow.com>",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack & http-server -p3000",
+    "dev":    "webpack & http-serve -p3000",
     "deploy": "webpack --config webpack.production.config.js",
-    "test": "eslint ./src/**/**.js"
+    "test":   "eslint ./src/**/**.js"
   },
   "license": "MIT",
   "devDependencies": {
