--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prospector",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "author": "carl furrow <hello@carlfurrow.com>",
   "main": "index.js",
@@ -29,6 +29,9 @@
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.30.1",
     "http-serve": "^1.0.1",
+    "lodash": "^4.17.13",
+    "mem": "^4.0.0",
+    "tar": "^2.2.2",
     "webpack": "^3.4.1"
   },
   "dependencies": {
