--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-whitelist": "^1.3.2",
+    "deep-extend": "^0.5.1",
     "phaser-ce": "^2.11.0",
     "webfontloader": "^1.6.28"
   },
