--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cordova-ios": "^5.1.1",
     "cordova-plugin-whitelist": "^1.3.2",
     "deep-extend": "^0.5.1",
+    "minimist": "^0.2.1",
     "phaser-ce": "^2.11.0",
     "webfontloader": "^1.6.28"
   },
